Render program address and package names

--- a/template/clients/js/clients/js/package.json.njk
+++ b/template/clients/js/clients/js/package.json.njk
@@ -1,5 +1,5 @@
 {
-  "name": "@acme/counter",
+  "name": "{{ jsClientPackageName }}",
   "version": "0.1.0",
   "description": "Counters on-chain",
   "sideEffects": false,
@@ -30,8 +30,6 @@
     "access": "public",
     "registry": "https://registry.npmjs.org"
   },
-  "repository": "https://github.com/lorisleiva/kinobi-template.git",
-  "author": "Loris Leiva",
   "license": "MIT",
   "dependencies": {
     "@solana/accounts": "2.0.0-experimental.a7a613a",
