--- a/template/clients/rust/clients/rust/Cargo.toml.njk
+++ b/template/clients/rust/clients/rust/Cargo.toml.njk
@@ -1,5 +1,5 @@
 [package]
-name = "acme-counter-client"
+name = "{{ rustClientCrateName }}"
 version = "0.1.0"
 edition = "2021"
 readme = "README.md"
