--- a/template/programs/counter-shank/program/Cargo.toml.njk
+++ b/template/programs/counter-shank/program/Cargo.toml.njk
@@ -1,5 +1,5 @@
 [package]
-name = "acme-counter"
+name = "{{ programCrateName }}"
 version = "0.1.0"
 edition = "2021"
 readme = "./README.md"
@@ -7,11 +7,8 @@ license-file = "../LICENSE"
 publish = false
 
 [package.metadata.solana]
-program-id = "MyProgram1111111111111111111111111111111111"
-program-dependencies = [
-  "metaqbxxUerdq28cj1RbAWkYQm3ybzjb6a8bt518x1s",
-  "noopb9bkMVfRPU8AsbpTUg8AQkHtKwMYZiFUjNRtMmV",
-]
+program-id = "{{ programAddress }}"
+program-dependencies = []
 
 [lib]
 crate-type = ["cdylib", "lib"]
