--- a/template/programs/counter-shank/program/src/lib.rs.njk
+++ b/template/programs/counter-shank/program/src/lib.rs.njk
@@ -8,4 +8,4 @@ pub mod utils;
 
 pub use solana_program;
 
-solana_program::declare_id!("MyProgram1111111111111111111111111111111111");
+solana_program::declare_id!("{{ programAddress }}");
