Fix JS client tests

--- a/template/clients/js/clients/js/test/increment.test.ts.njk
+++ b/template/clients/js/clients/js/test/increment.test.ts.njk
@@ -80,7 +80,7 @@ test('it cannot increment a counter that does not exist', async (t) => {
   );
   t.regex(
     error.data.logs.join('\n'),
-    /Account "counter" \[.+\] expected program owner \[MyProgram1111111111111111111111111111111111\], got \[11111111111111111111111111111111\]/
+    /Account "counter" \[.+\] expected program owner \[{{ programAddress }}\], got \[11111111111111111111111111111111\]/
   );
 });
 
