Fix rust client tests

--- a/template/clients/base/scripts/generate-clients.mjs.njk
+++ b/template/clients/base/scripts/generate-clients.mjs.njk
@@ -6,6 +6,13 @@ import { getAllProgramIdls } from "./utils.mjs";
 // Instanciate Kinobi.
 const kinobi = k.createFromIdls(getAllProgramIdls());
 
+// Update programs.
+kinobi.update(
+  k.updateProgramsVisitor({
+    "{{ programCrateName | camelCase }}": { name: "{{ programName | camelCase }}" },
+  })
+);
+
 // Update accounts.
 kinobi.update(
   k.updateAccountsVisitor({
