--- a/template/programs/counter-shank/program/Cargo.toml.njk
+++ b/template/programs/counter-shank/program/Cargo.toml.njk
@@ -18,5 +18,5 @@ borsh = "^0.10"
 shank = "^0.4.2"
 num-derive = "^0.3"
 num-traits = "^0.2"
-solana-program = "~1.18"
+solana-program = "~{{ solanaVersion }}"
 thiserror = "^1.0"
