--- a/template/base/README.md.njk
+++ b/template/base/README.md.njk
@@ -26,7 +26,7 @@ The first thing you'll want to do is install NPM dependencies which will allow y
 
 You'll notice a `program` folder in the root of this repository. This is where your generated Solana program is located.
 
-Whilst only one program gets generated, not that you can have as many programs as you like in this repository.
+Whilst only one program gets generated, note that you can have as many programs as you like in this repository.
 Whenever you add a new program folder to this repository, remember to add it to the `members` array of your root `Cargo.toml` file.
 That way, your programs will be recognized by the following scripts that allow you to build, test, format and lint your programs respectively.
 
