Rename validator scripts

--- a/template/base/README.md.njk
+++ b/template/base/README.md.njk
@@ -80,13 +80,13 @@ The following clients are available for your programs. You may use the following
 The following script is available to start your local validator.
 
 ```sh
-{{ getNpmCommand("validator") }}
+{{ getNpmCommand("validator:start") }}
 ```
 
-By default, if a local validator is already running, the script will be skipped. You may use the `--restart` flag to force the validator to restart.
+By default, if a local validator is already running, the script will be skipped. You may use the `validator:restart` script instead to force the validator to restart.
 
 ```sh
-{{ getNpmCommand("validator", "--restart") }}
+{{ getNpmCommand("validator:restart") }}
 ```
 
 Finally, you may stop the local validator using the following command.
@@ -112,6 +112,6 @@ Next time you build your program and run your validator, these external programs
 
 ```sh
 {{ getNpmCommand("programs:build") }}
-{{ getNpmCommand("validator", "--restart") }}
+{{ getNpmCommand("validator:restart") }}
 ```
 {% endif %}
