--- a/template/clients/js/clients/js/README.md.njk
+++ b/template/clients/js/clients/js/README.md.njk
@@ -19,7 +19,7 @@ Alternatively, you can go into the client directory and run the tests directly.
 ```sh
 # Build your programs and start the validator.
 {{ getNpmCommand("programs:build") }}
-{{ getNpmCommand("validator") }}
+{{ getNpmCommand("validator:restart") }}
 
 # Go into the client directory and run the tests.
 cd clients/js
