Generate description in JS client package.json

--- a/template/clients/js/clients/js/package.json.njk
+++ b/template/clients/js/clients/js/package.json.njk
@@ -1,7 +1,7 @@
 {
   "name": "{{ jsClientPackageName }}",
   "version": "0.1.0",
-  "description": "Counters on-chain",
+  "description": "JavaScript client for the {{ programName | titleCase }} program",
   "sideEffects": false,
   "module": "dist/src/index.mjs",
   "main": "dist/src/index.js",
