--- a/template/clients/js/clients/js/package.json.njk
+++ b/template/clients/js/clients/js/package.json.njk
@@ -34,16 +34,10 @@
   "dependencies": {
     "@solana/accounts": "^2.0.0-preview",
     "@solana/addresses": "^2.0.0-preview",
-    "@solana/codecs-core": "^2.0.0-preview",
-    "@solana/codecs-data-structures": "^2.0.0-preview",
-    "@solana/codecs-numbers": "^2.0.0-preview",
-    "@solana/codecs-strings": "^2.0.0-preview",
+    "@solana/codecs": "^2.0.0-preview",
     "@solana/instructions": "^2.0.0-preview",
-    "@solana/keys": "^2.0.0-preview",
-    "@solana/options": "^2.0.0-preview",
     "@solana/programs": "^2.0.0-preview",
-    "@solana/signers": "^2.0.0-preview",
-    "@solana/transactions": "^2.0.0-preview"
+    "@solana/signers": "^2.0.0-preview"
   },
   "devDependencies": {
     "@ava/typescript": "^4.1.0",
