--- a/template/clients/js/clients/js/package.json.njk
+++ b/template/clients/js/clients/js/package.json.njk
@@ -3,12 +3,12 @@
   "version": "0.0.0",
   "description": "JavaScript client for the {{ programName | titleCase }} program",
   "sideEffects": false,
-  "module": "dist/src/index.mjs",
-  "main": "dist/src/index.js",
-  "types": "dist/types/index.d.ts",
+  "module": "./dist/src/index.mjs",
+  "main": "./dist/src/index.js",
+  "types": "./dist/types/src/index.d.ts",
   "exports": {
     ".": {
-      "types": "./dist/src/index.d.ts",
+      "types": "./dist/types/src/index.d.ts",
       "import": "./dist/src/index.mjs",
       "require": "./dist/src/index.js"
     }
