--- a/template/clients/js/clients/js/package.json.njk
+++ b/template/clients/js/clients/js/package.json.njk
@@ -3,15 +3,15 @@
   "version": "0.0.0",
   "description": "JavaScript client for the {{ programName | titleCase }} program",
   "sideEffects": false,
-  "module": "./dist/src/index.mjs",
-  "main": "./dist/src/index.js",
+  "module": "./dist/src/index.js",
+  "main": "./dist/src/index.cjs",
   "types": "./dist/types/src/index.d.ts",
   "type": "module",
   "exports": {
     ".": {
       "types": "./dist/types/src/index.d.ts",
-      "import": "./dist/src/index.mjs",
-      "require": "./dist/src/index.js"
+      "import": "./dist/src/index.js",
+      "require": "./dist/src/index.cjs"
     }
   },
   "files": [
