--- a/template/clients/js/clients/js/package.json.njk
+++ b/template/clients/js/clients/js/package.json.njk
@@ -42,16 +42,13 @@
   },
   "devDependencies": {
     "@ava/typescript": "^4.1.0",
+    "@solana/eslint-config-solana": "^3.0.0",
     "@solana/web3.js": "^2.0.0-preview",
     "@solana/webcrypto-ed25519-polyfill": "^2.0.0-preview",
     "@typescript-eslint/eslint-plugin": "^7.3.1",
     "@typescript-eslint/parser": "^7.3.1",
     "ava": "^6.1.2",
     "eslint": "^8.57.0",
-    "eslint-config-airbnb-typescript": "^18.0.0",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-import": "^2.29.0",
-    "eslint-plugin-prettier": "^5.1.3",
     "prettier": "^3.2.5",
     "rimraf": "^5.0.5",
     "tsup": "^8.0.2",
