--- a/template/clients/base/scripts/generate-clients.mjs.njk
+++ b/template/clients/base/scripts/generate-clients.mjs.njk
@@ -21,7 +21,7 @@ kinobi.update(
   })
 );
 
-{% if programFramework === 'anchor' %}
+{% if programFramework === 'shank' %}
 // Update accounts.
 kinobi.update(
   k.updateAccountsVisitor({
