--- a/template/anchor/clients/rust/clients/rust/tests/create.rs.njk
+++ b/template/anchor/clients/rust/clients/rust/tests/create.rs.njk
@@ -3,7 +3,7 @@
 use {{ rustClientCrateName | snakeCase }}::{accounts::Counter, instructions::CreateBuilder};
 use borsh::BorshDeserialize;
 use solana_program_test::{tokio, ProgramTest};
-use solana_sdk::{signature::Signer, transaction::Transaction};
+use solana_sdk::{signature::Signer, signer::keypair::Keypair, transaction::Transaction};
 
 #[tokio::test]
 async fn create() {
@@ -11,29 +11,29 @@ async fn create() {
         .start_with_context()
         .await;
 
-    // Given a PDA derived from the payer's public key.
+    // Given a new empty account.
 
-    let address = Counter::find_pda(&context.payer.pubkey()).0;
+    let address = Keypair::new();
 
     let ix = CreateBuilder::new()
-        .counter(address)
+        .counter(address.pubkey())
         .authority(context.payer.pubkey())
         .payer(context.payer.pubkey())
         .instruction();
 
-    // When we create a new counter.
+    // When we create a new counter at this address.
 
     let tx = Transaction::new_signed_with_payer(
         &[ix],
         Some(&context.payer.pubkey()),
-        &[&context.payer],
+        &[&context.payer, &address],
         context.last_blockhash,
     );
     context.banks_client.process_transaction(tx).await.unwrap();
 
     // Then an account was created with the correct data.
 
-    let account = context.banks_client.get_account(address).await.unwrap();
+    let account = context.banks_client.get_account(address.pubkey()).await.unwrap();
 
     assert!(account.is_some());
 
@@ -43,5 +43,5 @@ async fn create() {
     let mut account_data = account.data.as_ref();
     let counter = Counter::deserialize(&mut account_data).unwrap();
     assert_eq!(counter.authority, context.payer.pubkey());
-    assert_eq!(counter.value, 0);
+    assert_eq!(counter.count, 0);
 }
