--- a/template/anchor/base/program/Cargo.toml.njk
+++ b/template/anchor/base/program/Cargo.toml.njk
@@ -15,10 +15,8 @@ crate-type = ["cdylib", "lib"]
 
 [features]
 no-entrypoint = []
-no-idl = []
-no-log-ix-name = []
 cpi = ["no-entrypoint"]
-default = []
+idl-build = ["anchor-lang/idl-build"]
 
 [dependencies]
 anchor-lang = "{{ anchorVersion }}"
