--- a/template/anchor/base/program/Cargo.toml.njk
+++ b/template/anchor/base/program/Cargo.toml.njk
@@ -20,3 +20,4 @@ idl-build = ["anchor-lang/idl-build"]
 
 [dependencies]
 anchor-lang = "{{ anchorVersion }}"
+solana-program = "~{{ solanaVersion }}"
