Add account dependencies

--- a/template/anchor/base/program/Cargo.toml.njk
+++ b/template/anchor/base/program/Cargo.toml.njk
@@ -9,6 +9,7 @@ publish = false
 [package.metadata.solana]
 program-id = "{{ programAddress }}"
 program-dependencies = []
+account-dependencies = []
 
 [lib]
 crate-type = ["cdylib", "lib"]
