Fix prettier option in JS renderer

--- a/template/clients/base/scripts/generate-clients.mjs.njk
+++ b/template/clients/base/scripts/generate-clients.mjs.njk
@@ -73,7 +73,7 @@ kinobi.update(
 const jsClient = path.join(__dirname, "..", "clients", "js");
 kinobi.accept(
   renderJavaScriptVisitor(path.join(jsClient, "src", "generated"), { 
-    prettier: require(path.join(jsClient, ".prettierrc.json"))
+    prettierOptions: require(path.join(jsClient, ".prettierrc.json"))
   })
 );
 {% endif %}
