--- a/template/base/Cargo.toml.njk
+++ b/template/base/Cargo.toml.njk
@@ -3,5 +3,5 @@ resolver = "2"
 members = ["program"]
 
 [workspace.metadata.toolchain]
-lint = "1.75.0"
-format = "1.75.0"
+lint = "{{ toolchain }}"
+format = "{{ toolchain }}"
