--- a/template/base/Cargo.toml.njk
+++ b/template/base/Cargo.toml.njk
@@ -2,6 +2,8 @@
 resolver = "2"
 members = ["program"]
 
-[workspace.metadata.toolchain]
-lint = "{{ toolchain }}"
+# Specify Rust toolchains for rustfmt, clippy, and build.
+# Any unprovided toolchains default to stable.
+[workspace.metadata.toolchains]
 format = "{{ toolchain }}"
+lint = "{{ toolchain }}"
