Reverse last commit

--- a/template/base/Cargo.toml.njk
+++ b/template/base/Cargo.toml.njk
@@ -10,3 +10,9 @@ members = ["program"]
 [profile.release]
 overflow-checks = true
 {% endif %}
+
+# Specify Rust toolchains for rustfmt, clippy, and build.
+# Any unprovided toolchains default to stable.
+[workspace.metadata.toolchains]
+format = "{{ toolchain }}"
+lint = "{{ toolchain }}"
