--- a/template/anchor/base/program/Cargo.toml.njk
+++ b/template/anchor/base/program/Cargo.toml.njk
@@ -21,4 +21,4 @@ idl-build = ["anchor-lang/idl-build"]
 
 [dependencies]
 anchor-lang = "{{ anchorVersion }}"
-solana-program = "~{{ solanaVersion }}"
+solana-program = "~{{ solanaVersionWithoutPatch }}"
