--- a/template/clients/rust/clients/rust/Cargo.toml.njk
+++ b/template/clients/rust/clients/rust/Cargo.toml.njk
@@ -15,10 +15,10 @@ num-derive = "^0.3"
 num-traits = "^0.2"
 serde = { version = "^1.0", features = ["derive"], optional = true }
 serde_with = { version = "^3.0", optional = true }
-solana-program = "~{{ solanaVersion }}"
+solana-program = "~{{ solanaVersionWithoutPatch }}"
 thiserror = "^1.0"
 
 [dev-dependencies]
 assert_matches = "1.5.0"
-solana-program-test = "~{{ solanaVersion }}"
-solana-sdk = "~{{ solanaVersion }}"
+solana-program-test = "~{{ solanaVersionWithoutPatch }}"
+solana-sdk = "~{{ solanaVersionWithoutPatch }}"
