--- a/template/shank/base/program/Cargo.toml.njk
+++ b/template/shank/base/program/Cargo.toml.njk
@@ -19,5 +19,5 @@ borsh = "^0.10"
 shank = "^0.4.2"
 num-derive = "^0.3"
 num-traits = "^0.2"
-solana-program = "~{{ solanaVersionWithoutPatch }}"
+solana-program = "~{{ solanaVersion.withoutPatch }}"
 thiserror = "^1.0"
