Add description and repository to Rust client Cargo.toml

--- a/template/clients/rust/clients/rust/Cargo.toml.njk
+++ b/template/clients/rust/clients/rust/Cargo.toml.njk
@@ -1,6 +1,8 @@
 [package]
 name = "{{ rustClientCrateName }}"
 version = "0.0.0"
+description = "A generated Rust library for the {{ programName | titleCase }} program"
+repository = "https://github.com/{{ organizationName }}/{{ targetDirectoryName }}"
 edition = "2021"
 readme = "README.md"
 license-file = "../../LICENSE"
