--- a/template/base/.github/workflows/main.yml.njk
+++ b/template/base/.github/workflows/main.yml.njk
@@ -99,7 +99,7 @@ jobs:
           key: {% raw %}${{ runner.os }}-builds-${{ github.sha }}{% endraw %}
 
   test_programs:
-    name: Test Progams
+    name: Test Programs
     runs-on: ubuntu-latest
     needs: format_and_lint_programs
     steps:
