Add repository URL to generated package.json

--- a/template/clients/js/clients/js/package.json.njk
+++ b/template/clients/js/clients/js/package.json.njk
@@ -32,6 +32,14 @@
     "access": "public",
     "registry": "https://registry.npmjs.org"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+{{ repositoryUrl }}.git"
+  },
+  "bugs": {
+    "url": "{{ repositoryUrl }}/issues"
+  },
+  "homepage": "{{ repositoryUrl }}#readme",
   "license": "MIT",
   "peerDependencies": {
     "@solana/web3.js": "2.0.0-rc.1"
