--- a/template/clients/rust/clients/rust/Cargo.toml.njk
+++ b/template/clients/rust/clients/rust/Cargo.toml.njk
@@ -2,7 +2,7 @@
 name = "{{ rustClientCrateName }}"
 version = "0.0.0"
 description = "A generated Rust library for the {{ programName | titleCase }} program"
-repository = "https://github.com/{{ organizationName }}/{{ targetDirectoryName }}"
+repository = "{{ repositoryUrl }}"
 edition = "2021"
 readme = "README.md"
 license-file = "../../LICENSE"
