--- a/template/clients/js/clients/js/package.json.njk
+++ b/template/clients/js/clients/js/package.json.njk
@@ -42,12 +42,12 @@
   "homepage": "{{ repositoryUrl }}#readme",
   "license": "MIT",
   "peerDependencies": {
-    "@solana/web3.js": "2.0.0-rc.3"
+    "@solana/web3.js": "2.0.0-canary-20241105102652"
   },
   "devDependencies": {
     "@ava/typescript": "^4.1.0",
     "@solana/eslint-config-solana": "^3.0.3",
-    "@solana/web3.js": "2.0.0-rc.3",
+    "@solana/web3.js": "2.0.0-canary-20241105102652",
     "@types/node": "^20",
     "@typescript-eslint/eslint-plugin": "^7.16.1",
     "@typescript-eslint/parser": "^7.16.1",
