cache and restore dumped accounts (#104)
* cache and restore dumped accounts

* combine account caching into program build

* add changeset

--- a/template/base/.github/workflows/main.yml.njk
+++ b/template/base/.github/workflows/main.yml.njk
@@ -92,10 +92,12 @@ jobs:
           path: ./target/deploy/*.so
           if-no-files-found: error
 
-      - name: Save Program Builds For Client Jobs
+      - name: Save Client Artifacts
         uses: actions/cache/save@v4
         with:
-          path: ./**/*.so
+          path: |
+            ./**/*.so
+            ./target/deploy/*.json
           key: {% raw %}${{ runner.os }}-builds-${{ github.sha }}{% endraw %}
 
   test_programs:
@@ -182,10 +184,12 @@ jobs:
         with:
           solana: true
 
-      - name: Restore Program Builds
+      - name: Restore Client Artifacts
         uses: actions/cache/restore@v4
         with:
-          path: ./**/*.so
+          path: |
+            ./**/*.so
+            ./target/deploy/*.json
           key: {% raw %}${{ runner.os }}-builds-${{ github.sha }}{% endraw %}
 
       - name: Test Client JS
