--- a/template/anchor/clients/js/clients/js/test/increment.test.ts.njk
+++ b/template/anchor/clients/js/clients/js/test/increment.test.ts.njk
@@ -6,7 +6,7 @@ import {
   isSolanaError,
   lamports,
   pipe,
-} from '@solana/web3.js';
+} from '@solana/kit';
 import test from 'ava';
 import {
   {{ programName | snakeCase | upper }}_ERROR__INVALID_AUTHORITY,
