--- a/template/shank/clients/js/clients/js/test/increment.test.ts.njk
+++ b/template/shank/clients/js/clients/js/test/increment.test.ts.njk
@@ -5,7 +5,7 @@ import {
   isSolanaError,
   lamports,
   pipe,
-} from '@solana/web3.js';
+} from '@solana/kit';
 import test from 'ava';
 import {
   {{ programName | snakeCase | upper }}_ERROR__INVALID_PDA,
